--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,14 @@
         <servlet-name>allCodes</servlet-name>
         <servlet-class>Controller.allCodes</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>deleteProduit</servlet-name>
+        <servlet-class>Controller.deleteProduit</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>AddPurchaseOrder</servlet-name>
+        <servlet-class>Controller.AddPurchaseOrder</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/LoginController</url-pattern>
@@ -39,6 +47,14 @@
     <servlet-mapping>
         <servlet-name>allCodes</servlet-name>
         <url-pattern>/allCodes</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>deleteProduit</servlet-name>
+        <url-pattern>/deleteProduit</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AddPurchaseOrder</servlet-name>
+        <url-pattern>/AddPurchaseOrder</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
