--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,19 @@
                 <groupId>org.hsqldb</groupId>
                 <artifactId>sqltool</artifactId>
                 <version>2.0.0</version>
-        </dependency>	
+        </dependency>
+        <!-- Derby embedded database and JDBC Driver -->
+        <dependency>
+                <groupId>org.apache.derby</groupId>
+                <artifactId>derby</artifactId>
+                <version>10.14.1.0</version>
+        </dependency>
+        <!-- Derby tols (for initializing database from SQL script) -->
+        <dependency>
+                <groupId>org.apache.derby</groupId>
+                <artifactId>derbytools</artifactId>
+                <version>10.14.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
