--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,10 @@
         <servlet-name>AddPurchaseOrder</servlet-name>
         <servlet-class>Controller.AddPurchaseOrder</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ApplicationListener</servlet-name>
+        <servlet-class>Controller.ApplicationListener</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/LoginController</url-pattern>
@@ -55,6 +59,10 @@
     <servlet-mapping>
         <servlet-name>AddPurchaseOrder</servlet-name>
         <url-pattern>/AddPurchaseOrder</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ApplicationListener</servlet-name>
+        <url-pattern>/ApplicationListener</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
