--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.3</version>
+            <type>pom</type>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
@@ -115,14 +121,6 @@
                             <outputDirectory>${endorsed.dir}</outputDirectory>
                             <silent>true</silent>
                             <artifactItems>
-                                <!-- for Heroku, see: https://devcenter.heroku.com/articles/java-webapp-runner -->
-                                <artifactItem>
-                                <groupId>com.github.jsimone</groupId>
-                                <artifactId>webapp-runner</artifactId>
-                                <version>8.5.23.0</version>
-                                <destFileName>webapp-runner.jar</destFileName>
-                                </artifactItem>
-                                
                             </artifactItems>
                         </configuration>
                     </execution>
