--- a/pom.xml
+++ b/pom.xml
@@ -125,7 +125,7 @@
                                 <artifactItem>
                                 <groupId>com.github.jsimone</groupId>
                                 <artifactId>webapp-runner</artifactId>
-                                <version>9.0.13.0</version>
+                                <version>8.5.23.0</version>
                                 <destFileName>webapp-runner.jar</destFileName>
                                 </artifactItem>
                                 <artifactItem>
@@ -138,6 +138,11 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-maven-plugin</artifactId>
+                <version>2.0.6</version>
             </plugin>
         </plugins>
     </build>
